# mold

./: .gitignore  .gitmodules  CMakeLists.txt  arch_i386.cc  arch_x86_64.cc  cmdline.cc  coff.cc  coff.h  compress.cc  filepath.cc  icf.cc  input_sections.cc  main.cc  mold.h  object_file.cc  output_chunks.cc  output_file.cc  passes.cc  perf.cc  platform.h  platform_linux.cc  platform_windows.cc  subprocess.cc  symbols.cc
test/linux/: allow-multiple-definition.sh  as-needed.sh  auxiliary.sh  basic.sh  bsymbolic-functions.sh  bsymbolic.sh  build-id.sh  canonical-plt.sh  comment.sh  common.sh  compress-debug-sections.sh  compressed-debug-info.sh  copyrel-protected.sh  copyrel-relro.sh  copyrel.sh  defs.sh  demangle.sh  discard.sh  dt_init.sh  duplicate-error.sh  dynamic-linker.sh  dynamic.sh  entry.sh  exception.sh  exclude-libs.sh  exclude-libs2.sh  execstack.sh  export-dynamic.sh  export-from-exe.sh  fatal-warnings.sh  filler.sh  filter.sh  gc-sections.sh  gnu-hash.sh  hello-dynamic.sh  hello-static.sh  help.sh  i386-hello-dynamic.sh  i386-hello-static.sh  i386-tls-gd.sh  (+65 more)
